Fixed weights app bug where main table overflowed into stats bar

--- a/apps/weights/src/TabWeights.css
+++ b/apps/weights/src/TabWeights.css
@@ -1,22 +1,20 @@
 .tabweights {
   overflow-y: scroll;
-  box-sizing: border-box;
+  margin-top: 10px;
+  border-top: 1px solid #CCCCCC;
 }
 
 .tabweightstable {
   width: 100%;
-  box-sizing: border-box;
 }
 
 .tabweightstablerow {
-  box-sizing: border-box;
   padding: 3px 3px 3px 3px;
   border-width: 1px;
   border-color: #CCCCCC;
   border-style: solid;
 }
 .tabweightstablecol {
-  box-sizing: border-box;
   padding: 3px 3px 3px 3px;
   border-width: 1px;
   border-color: #CCCCCC;
@@ -32,7 +30,6 @@
 }
 
 .tabweightstagtext {
-  box-sizing: border-box;
   text-align: center;
   border-radius: 3px;
   /*padding: 3px 3px 3px 3px */;
